--- a/README.mediawiki
+++ b/README.mediawiki
@@ -1,14 +1,24 @@
-Presto is a Hypermedia-driven generic editing framework. It consists of an SPI for data providers and a HTTP interface for retrieving and updating information. The APIs are quite stable, but will need maturing before considered final.
+Presto is an editing framework. 
+
+The idea behind it is that you can declare the rules for an editable object model in a schema, and then create and update data conforming to this schema using a data provider implementation. A schema is exposed through a schema provider and the data is updated through a data provider. By default the values of an object field is stored with the object itself, but there is a field resolver API that lets you pull in data from anywhere.
+
+The framework consists of an SPI for schema providers, data providers and field resolvers. There is also a JAX/RS application that provides a REST interface for accessing and updating data.
 
 == Features ==
 
-* Hypermedia driven generic editing.
-* Multiple data providers available (CouchDB and Ontopia).
+* Hypermedia-driven editing framework
 * JSON over HTTP using Hypermedia implemented in Java/JAX-RS.
+* Data providers: CouchDB, Riak, Ontopoly
+* Schema providers: In-memory, Ontopoly
+* Field resolvers: CouchDB views, Solr queries, Java functions
 
 == News ==
 
-* 2011-05-16: Presto added to github.
+* 2011-11-23: Version 0.4
+* 2011-11-02: Version 0.3
+* 2011-09-11: Version 0.2
+* 2011-06-14: Version 0.1
+* 2011-05-15: Presto added to github.
 
 == License ==
 Apache License, Version 2.0
