--- a/README.mediawiki
+++ b/README.mediawiki
@@ -1,6 +1,10 @@
 Presto is an editing framework. 
 
-The idea behind it is that you can declare the rules for an editable object model in a schema, and then create and update data conforming to this schema using a data provider implementation. A schema is exposed through a schema provider and the data is updated through a data provider. By default the values of an object field is stored with the object itself, but there is a field resolver API that lets you pull in data from anywhere.
+Presto is a framework made for data integrators, with the goal of making it easy to tie together data from multiple data sources into one coherent whole without having to centralize data storage.
+
+The idea behind Presto is that you can declare the rules for an editable object model in a schema, and then create and update data conforming to this schema using a data provider implementation. Or, to be more precise, there might be multiple schema providers and multiple data providers connected into a larger whole. A schema provider is responsible for the definition of a specific type, but its data may be stored in many locations. Well, that's not really accurate as a schema definition may be a composite of schema definitions from multiple schema providers.
+
+A schema is exposed through a schema provider and the data is accessed through a data provider. By default the values of an object field is stored with the object itself, but there is a field resolver API that lets you pull in data from anywhere.
 
 The framework consists of an SPI for schema providers, data providers and field resolvers. There is also a JAX/RS application that provides a REST interface for accessing and updating data.
 
@@ -9,9 +13,28 @@ The framework consists of an SPI for schema providers, data providers and field 
 * Hypermedia-driven editing framework
 * JSON over HTTP using Hypermedia implemented in Java/JAX-RS.
 * Data providers: CouchDB, Riak, Ontopoly
-* Schema providers: In-memory, Ontopoly
+* Schema providers: In-memory/JSON, Ontopoly
 * Field resolvers: CouchDB views, Solr queries, Java functions
 
+== Ideas for the future ==
+
+* Search API (TBD)
+
+Feel free to take on any of these, or any other, if you want:
+
+* Data providers: SPARQL, Cassandra, MongoDb, OrientDB, Solr, elasticsearch, JDBC, JPA
+* Field resolvers: elasticsearch query, Riak secondary indexes
+* Schema providers: a schema provider that stores its state in a data provider
+
+== Trying it out ==
+
+To start the REST interface, run the following commands:
+
+ cd presto-webdemo
+ mvn -Djetty.port=9999 jetty:run
+
+Then open http://localhost:9999/presto/editor in your web browser.
+ 
 == News ==
 
 * 2011-11-23: Version 0.4
