Edited the README.

--- a/README.mediawiki
+++ b/README.mediawiki
@@ -1,32 +1,18 @@
-Presto is an editing framework. 
+Presto is an editing framework made for data integrators. The goal is to make it easier to tie together data from multiple data sources into one coherent whole without having to centralize data storage.
 
-Presto is a framework made for data integrators, with the goal of making it easy to tie together data from multiple data sources into one coherent whole without having to centralize data storage.
-
-The idea behind Presto is that you can declare the rules for an editable object model in a schema, and then create and update data conforming to this schema using a data provider implementation. Or, to be more precise, there might be multiple schema providers and multiple data providers connected into a larger whole. A schema provider is responsible for the definition of a specific type, but its data may be stored in many locations. Well, that's not really accurate as a schema definition may be a composite of schema definitions from multiple schema providers.
+The idea behind Presto is that you can declare the rules for an editable object model in a schema. You can then create and update data conforming to this schema using a data provider implementation. There might be multiple schema providers and multiple data providers connected into a larger whole. A schema provider is responsible for the definition of a specific type, but the data it defines may be stored in many locations.
 
 A schema is exposed through a schema provider and the data is accessed through a data provider. By default the values of an object field is stored with the object itself, but there is a field resolver API that lets you pull in data from anywhere.
 
-The framework consists of an SPI for schema providers, data providers and field resolvers. There is also a JAX/RS application that provides a REST interface for accessing and updating data.
+The framework consists of an SPI for schema providers, data providers and field resolvers. There is also a JAX/RS application that provides a REST interface for accessing and updating data. What is missing at this time is a client-side editor implementation that uses the REST API.
 
 == Features ==
 
 * Hypermedia-driven editing framework
-* JSON over HTTP using Hypermedia implemented in Java/JAX-RS.
+* JSON over HTTP using Hypermedia (implemented with Java/JAX-RS).
 * Data providers: CouchDB, Riak, Ontopoly
 * Schema providers: In-memory/JSON, Ontopoly
 * Field resolvers: CouchDB views, Solr queries, Java functions
-
-== Ideas for the future ==
-
-* Search API (TBD)
-* Wizard-like editing flow
-
-Feel free to take on any of these, or any other, if you want:
-
-* A GUI built on top of the REST API
-* Data providers: SPARQL, Cassandra, MongoDb, OrientDB, Solr, elasticsearch, JDBC, JPA
-* Field resolvers: elasticsearch query, Riak secondary indexes
-* Schema providers: a schema provider that stores its state in a data provider
 
 == Trying it out ==
 
@@ -35,7 +21,7 @@ To start the REST interface, run the following commands:
  cd presto-webdemo
  mvn -Djetty.port=9999 jetty:run
 
-Then open http://localhost:9999/presto/editor in your web browser.
+Then open http://localhost:9999/presto/editor in your web browser. You can now follow the links to access the data in the data provider. You can also use the REST API to create and update data also. The API documentation is on its way.
 
 == News ==
 
@@ -45,6 +31,24 @@ Then open http://localhost:9999/presto/editor in your web browser.
 * 2011-06-14: Version 0.1
 * 2011-05-15: Presto added to github.
 
+== Todo ==
+
+* Server-side validation
+* Complete the Riak data provider
+
+== Ideas for the future ==
+
+* The project needs an open source client-side GUI that uses the REST API to provide HTML5 based editing.
+
+* Search and filtering API
+* Wizard-like editing flow
+
+Feel free to take on any of these, or any other, if you want:
+
+* A GUI built on top of the REST API
+* Data providers: SPARQL, Cassandra, MongoDb, OrientDB, Solr, elasticsearch, JDBC, JPA
+* Field resolvers: elasticsearch query, Riak secondary indexes
+* Schema providers: a schema provider that stores its state in a data provider
+
 == License ==
 Apache License, Version 2.0
-
