Added MongoDB to list of data providers.

--- a/README.mediawiki
+++ b/README.mediawiki
@@ -46,7 +46,7 @@ Then open http://localhost:9999/presto/editor in your web browser. You can now f
 Feel free to take on any of these, or any other, if you want:
 
 * A GUI built on top of the REST API
-* Data providers: SPARQL, Blueprints, Cassandra, MongoDb, Solr, elasticsearch, JDBC, JPA
+* Data providers: SPARQL, Blueprints, Cassandra, Solr, elasticsearch, JDBC, JPA
 * Field resolvers: elasticsearch query, Riak secondary indexes
 * Schema providers: a schema provider that stores its state in a data provider
 
