--- a/README.mediawiki
+++ b/README.mediawiki
@@ -1,6 +1,6 @@
 Presto is an editing framework made for data integrators. The goal is to make it easier to tie together data from multiple data sources into one coherent whole without having to centralize data storage.
 
-The idea behind Presto is that you can declare the rules for an editable object model in a schema. You can then create and update data conforming to this schema using a data provider implementation. There might be multiple schema providers and multiple data providers connected into a larger whole. A schema provider is responsible for the definition of a specific type, but the data it defines may be stored in many locations.
+The idea behind Presto is that you can declare the rules for an editable object model in a schema. You then create and update data conforming to this schema using a data provider implementation. There might be multiple schema providers and multiple data providers connected into a larger whole. A schema provider is responsible for the definition of a specific type, but the data it defines may be stored in many locations.
 
 A schema is exposed through a schema provider and the data is accessed through a data provider. By default the values of an object field is stored with the object itself, but there is a field resolver API that lets you pull in data from anywhere.
 
@@ -9,10 +9,10 @@ The framework consists of an SPI for schema providers, data providers and field 
 == Features ==
 
 * Hypermedia-driven editing framework
-* JSON over HTTP using Hypermedia (implemented with Java/JAX-RS).
-* Data providers: CouchDB, Riak, MongoDB, In-memory
+* JSON with links over HTTP (implemented with Java/JAX-RS).
+* Data providers: MongoDB, CouchDB, Riak, In-memory
 * Schema providers: In-memory/JSON
-* Field resolvers: CouchDB views, Solr queries, Java functions
+* Field resolvers: MongoDB queries, Solr queries, CouchDB views, Java functions
 
 == Trying it out ==
 
@@ -25,13 +25,18 @@ Then open http://localhost:9999/presto/editor in your web browser. You can now f
 
 == News ==
 
+* 2013-02-26: Version 0.6
 * 2012-10-22: Version 0.5
 * 2011-11-23: Version 0.4
 
 == Todo ==
 
-* Server-side validation
-* MongoDB query field resolver
+* HTTP Etag support
+* Flexible and compact server-side API for building HTTP representations
+* Ability to edit inline topics as if they were standalone topics
+* Aggregation framework
+* Server-side sorting of field sets
+* Lazy-loading of field values
 
 == Ideas for the future ==
 
