--- a/README.mediawiki
+++ b/README.mediawiki
@@ -27,16 +27,6 @@ Then open http://localhost:9999/presto/editor in your web browser. You can now f
 
 * 2013-02-26: Version 0.6
 * 2012-10-22: Version 0.5
-* 2011-11-23: Version 0.4
-
-== Todo ==
-
-* HTTP Etag support
-* Flexible and compact server-side API for building HTTP representations
-* Ability to edit inline topics as if they were standalone topics
-* Aggregation framework
-* Server-side sorting of field sets
-* Lazy-loading of field values
 
 == Ideas for the future ==
 
@@ -51,6 +41,8 @@ Feel free to take on any of these, or any other, if you want:
 * Data providers: SPARQL, Blueprints, Cassandra, Solr, elasticsearch, JDBC, JPA
 * Field resolvers: elasticsearch query, Riak secondary indexes
 * Schema providers: a schema provider that stores its state in a data provider
+
+See TODO.txt for a more detailed list.
 
 == License ==
 Apache License, Version 2.0
