--- a/TODO.txt
+++ b/TODO.txt
@@ -2,9 +2,15 @@
 TODOs
 ---------------------------------------------------------------------
 
+- Make "name" the default name field instead of the current ":name"
+  non-field.
+
+- Add HTTP ETag header to responses
+
 - Flexible and compact server-side API for building HTTP representations
 
-- Ability to edit inline topics as if they were standalone topics
+- Ability to edit inline topics as if they were standalone topics. Or,
+  perhaps this should be a client-only feature.
 
 - Server-side sorting of field sets
 
@@ -20,15 +26,11 @@ TODOs
   - example: "resources" : {"new-topic-label" : "Ny {0}"}
 
 - Client should add Value.params['valueType']=<type-id> when adding
-  "external" values to a field. This so that the server can be more
-  strict when validating.
+  "external" values to a field. This so that the server can know what
+  type of value was added. This is primarily a problem when there are
+  multiple id namespaces.
 
-- Make "name" the default name field instead of the current ":name"
-  non-field.
-
-- Add Value.errors
-
-- Add HTTP ETag header to responses
+- Add Value.errors and Value.messages, like those on FieldData.
 
 - Field resolver that does aggregation of field values (replace, merge/union)
 
@@ -40,6 +42,7 @@ TODOs
 
   - UNION, INTERSECTION, MINUS
 
-- Flattended fields (a kind of embedding). if more than one field
-  uses a resolver to access the same data then batching these up
-  into a higher level resolver makes sense.
+- Virtual fields; useful when more than one field uses a resolver to
+  do traversal down a common path. The common traversal should be done
+  just once.
+
