create-field-instance now contains parentViewId, so that we can recreate parent link.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -6,3 +6,6 @@ Changes
 
 - Client side filtering with 'available-field-values' links. Uses URI
   template to do this.
+
+- Now possible to PUT inline topics to server. Topic will get id and
+  'update-parent' link, but will not be created on server.
