Now able to explicitly specify type.defaultView and type.createView and field.createView.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -7,5 +7,9 @@ Changes
 - Client side filtering with 'available-field-values' links. Uses URI
   template to do this.
 
-- Now possible to PUT inline topics to server. Topic will get id and
-  'update-parent' link, but will not be created on server.
+- Now possible to PUT inline topics to server using 'create' link'.
+  Topic will be assigned an id and an 'update-parent' link, but the
+  topic will not be created on server.
+
+- Now able to explicitly specify type.defaultView and type.createView
+  and field.createView.
